--- a/fabioif.com.CompanyManager/CompanyManager.Service/CompanyManager.Service.csproj
+++ b/fabioif.com.CompanyManager/CompanyManager.Service/CompanyManager.Service.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4C11EEB3-6FE8-46CF-9277-3C9C74DD055E}</ProjectGuid>
+    <ProjectGuid>{84DEE757-E91C-4D7F-9966-0671AC0E90C5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>fabioif.com.CompanyManager.Entities</RootNamespace>
-    <AssemblyName>fabioif.com.CompanyManager.Entities</AssemblyName>
+    <RootNamespace>CompanyManager.Service</RootNamespace>
+    <AssemblyName>CompanyManager.Service</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
