Implementando Repository e Service

--- a/fabioif.com.CompanyManager/CompanyManager.Service/CompanyManager.Service.csproj
+++ b/fabioif.com.CompanyManager/CompanyManager.Service/CompanyManager.Service.csproj
@@ -39,8 +39,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Interface\IUsuarioService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\UsuarioService.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\CompanyManager.Entities\CompanyManager.Entities.csproj">
+      <Project>{54bbf07e-a07d-46ac-9a96-357aa2a04150}</Project>
+      <Name>CompanyManager.Entities</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
