--- a/fabioif.com.CompanyManager/CompanyManager.Service/CompanyManager.Service.csproj
+++ b/fabioif.com.CompanyManager/CompanyManager.Service/CompanyManager.Service.csproj
@@ -49,6 +49,10 @@
       <Project>{54bbf07e-a07d-46ac-9a96-357aa2a04150}</Project>
       <Name>CompanyManager.Entities</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CompanyManager.Repository\CompanyManager.Repository.csproj">
+      <Project>{f001dee0-52b3-4579-bbd5-dc07fd5e50b2}</Project>
+      <Name>CompanyManager.Repository</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
